# rust_study

./: .gitignore  Cargo.toml  loaddatabend.sh
src/: arc_demo.rs  file_op.rs  main.rs  option_op.rs  thread_scope.rs
src/test_file_op/: mod.rs
src/test_iterator/: mod.rs
src/test_mutex_demo/: mod.rs  mutex_demo.rs
src/test_option_op/: mod.rs
src/test_parquet_demo/: mod.rs  parquet_demo.rs
src/test_thread_scope/: mod.rs
src/test_trait/: mod.rs
test_data/csv_input/: input.csv
tests/: rust_test.rs
tests/datafusion_example/: mod.rs
tests/move_fn_test/: mod.rs  move_fn_test.rs
