[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { package = "arrow2", version = "0.14.0", default-features = false, features = [
    "io_parquet",
    "io_parquet_compression",
] }
arrow-format = { version = "0.7.0", features = ["flight-data", "flight-service", "ipc"] }
futures = "0.3.24"
parquet2 = { version = "0.16.3", default_features = false }
tracing = "0.1.36"
crossbeam = "0.8.2"